--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
     href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" rel="stylesheet"/>
+  
+  <link
+    href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.css"
+    rel="stylesheet"
+  />
+  <link
+    href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.autoplay.css"
+    rel="stylesheet"
+  />
+  <link href="test.css" rel="stylesheet">
 </head>
 <body>
 <!-- ============================================ -->
@@ -138,12 +148,34 @@
   </div>
   
   <!-- Background Image -->
-  <picture class="cs-background">
-    <source media="(max-width: 600px)" srcset="images/chevrolet-camaro.jpg">
-    <source media="(min-width: 601px)" srcset="images/chevrolet-camaro.jpg">
-    <img alt="chevrolet camaro" aria-hidden="true" decoding="async" height="1500"
-         src="images/chevrolet-camaro.jpg" width="2250">
-  </picture>
+  <div class="cs-background">
+    <div class="f-carousel" id="myCarousel">
+      <div class="f-carousel__slide">
+        <picture>
+          <source media="(max-width: 600px)" srcset="images/chevrolet-camaro.jpg">
+          <source media="(min-width: 601px)" srcset="images/chevrolet-camaro.jpg">
+          <img alt="chevrolet camaro" aria-hidden="true" decoding="async" height="1500"
+               src="images/chevrolet-camaro.jpg" width="2250">
+        </picture>
+      </div>
+      <div class="f-carousel__slide">
+        <picture>
+          <source media="(max-width: 600px)" srcset="images/ferrari_f40.jpg">
+          <source media="(min-width: 601px)" srcset="images/ferrari_f40.jpg">
+          <img alt="ferrari f40" aria-hidden="true" decoding="async" height="1500"
+               src="images/ferrari_f40.jpg" width="2250">
+        </picture>
+      </div>
+      <div class="f-carousel__slide">
+        <picture>
+          <source media="(max-width: 600px)" srcset="images/ferrari_f40_2.jpg">
+          <source media="(min-width: 601px)" srcset="images/ferrari_f40_2.jpg">
+          <img alt="ferrari f40" aria-hidden="true" decoding="async" height="1500"
+               src="images/ferrari_f40_2.jpg" width="2250">
+        </picture>
+      </div>
+    </div>
+  </div>
 </section>
 
 <!-- ============================================ -->
@@ -448,5 +480,9 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 <script src="javascript/fancybox.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.umd.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.autoplay.umd.js"></script>
+<script src="test.js"></script>
 </body>
 </html>
