Changed button colours

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.autoplay.css"
     rel="stylesheet"
   />
-  <link href="test.css" rel="stylesheet">
+  <link href="styles/carousel.css" rel="stylesheet">
 </head>
 <body>
 <!-- ============================================ -->
@@ -480,9 +480,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 <script src="javascript/fancybox.js"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.umd.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.autoplay.umd.js"></script>
-<script src="test.js"></script>
+<script src="javascript/carousel.js"></script>
 </body>
 </html>
