Changed Hero Image

--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
 
 <section id="hero-219">
   <div class="cs-container">
-    <h1 class="cs-title">Chevrolet Camaro Supercar</h1>
+    <h1 class="cs-title">Volkswagon Beetle</h1>
     <p class="cs-text">
-      From the RaceTrack to the Display Case
+      From Classic Roads to Collector's Pride
     </p>
     <a class="cs-button-solid" href="">Find out more</a>
   </div>
@@ -152,26 +152,26 @@
     <div class="f-carousel" id="myCarousel">
       <div class="f-carousel__slide">
         <picture>
-          <source media="(max-width: 600px)" srcset="images/chevrolet-camaro.jpg">
-          <source media="(min-width: 601px)" srcset="images/chevrolet-camaro.jpg">
+          <source media="(max-width: 600px)" srcset="images/beetle_1.jpg">
+          <source media="(min-width: 601px)" srcset="images/beetle_1.jpg">
           <img alt="chevrolet camaro" aria-hidden="true" decoding="async" height="1500"
-               src="images/chevrolet-camaro.jpg" width="2250">
+               src="images/beetle_1.jpg" width="2250">
         </picture>
       </div>
       <div class="f-carousel__slide">
         <picture>
-          <source media="(max-width: 600px)" srcset="images/ferrari_f40.jpg">
-          <source media="(min-width: 601px)" srcset="images/ferrari_f40.jpg">
+          <source media="(max-width: 600px)" srcset="images/beetle_2.jpg">
+          <source media="(min-width: 601px)" srcset="images/beetle_2.jpg">
           <img alt="ferrari f40" aria-hidden="true" decoding="async" height="1500"
-               src="images/ferrari_f40.jpg" width="2250">
+               src="images/beetle_2.jpg" width="2250">
         </picture>
       </div>
       <div class="f-carousel__slide">
         <picture>
-          <source media="(max-width: 600px)" srcset="images/ferrari_f40_2.jpg">
-          <source media="(min-width: 601px)" srcset="images/ferrari_f40_2.jpg">
+          <source media="(max-width: 600px)" srcset="images/beetle_3.jpg">
+          <source media="(min-width: 601px)" srcset="images/beetle_3.jpg">
           <img alt="ferrari f40" aria-hidden="true" decoding="async" height="1500"
-               src="images/ferrari_f40_2.jpg" width="2250">
+               src="images/beetle_3.jpg" width="2250">
         </picture>
       </div>
     </div>
