Added Webcrawler avoidance

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>JaysModels</title>
+  <link href="/images/favicon.png" rel="icon" type="image/x-icon">
+  
+  <meta content="noindex,nofollow" name="robots">
   
   <link href="styles/global.css" rel="stylesheet"/>
   <link href="styles/header.css" rel="stylesheet"/>
