Removed / in self-closed tags

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   
   <meta content="noindex,nofollow" name="robots">
   
-  <link href="styles/global.css" rel="stylesheet"/>
-  <link href="styles/header.css" rel="stylesheet"/>
-  <link href="styles/dark.css" rel="stylesheet"/>
-  <link href="styles/hero.css" rel="stylesheet"/>
-  <link href="styles/sbsr_hero.css" rel="stylesheet"/>
-  <link href="styles/gallery.css" rel="stylesheet"/>
-  <link href="styles/gallery_button.css" rel="stylesheet"/>
-  <link href="styles/categories.css" rel="stylesheet"/>
-  <link href="styles/footer.css" rel="stylesheet"/>
+  <link href="styles/global.css" rel="stylesheet">
+  <link href="styles/header.css" rel="stylesheet">
+  <link href="styles/dark.css" rel="stylesheet">
+  <link href="styles/hero.css" rel="stylesheet">
+  <link href="styles/sbsr_hero.css" rel="stylesheet">
+  <link href="styles/gallery.css" rel="stylesheet">
+  <link href="styles/gallery_button.css" rel="stylesheet">
+  <link href="styles/categories.css" rel="stylesheet">
+  <link href="styles/footer.css" rel="stylesheet">
   
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
@@ -25,16 +25,16 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" rel="stylesheet">
   
   <link
     href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.css"
     rel="stylesheet"
-  />
+  >
   <link
     href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.autoplay.css"
     rel="stylesheet"
-  />
+  >
   <link href="styles/carousel.css" rel="stylesheet">
 </head>
 <body>
@@ -66,13 +66,13 @@
         <ul aria-expanded="false" class="cs-ul" id="cs-expanded">
           
           <li class="cs-li cs-dropdown" tabindex="0">
-                        <span class="cs-li-link">
-                           Model Kits
-                            <img alt="dropdown icon"
-                                 aria-hidden="true"
-                                 class="cs-drop-icon" decoding="async" height="15"
-                                 src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/down-gold.svg" width="15">
-                        </span>
+            <span class="cs-li-link">
+               Model Kits
+                <img alt="dropdown icon"
+                     aria-hidden="true"
+                     class="cs-drop-icon" decoding="async" height="15"
+                     src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/down-gold.svg" width="15">
+            </span>
             <ul class="cs-drop-ul">
               <li class="cs-drop-li">
                 <a class="cs-li-link cs-drop-link" href="">Cars</a>
