Changed online download images to local and optimized

--- a/index.html
+++ b/index.html
@@ -155,25 +155,25 @@
     <div class="f-carousel" id="myCarousel">
       <div class="f-carousel__slide">
         <picture>
-          <source media="(max-width: 600px)" srcset="images/beetle_1.webp">
+          <source media="(max-width: 600px)" srcset="images/beetle_1_small.webp">
           <source media="(min-width: 601px)" srcset="images/beetle_1.webp">
-          <img alt="chevrolet camaro" aria-hidden="true" decoding="async" height="1500"
+          <img alt="chevrolet camaro" aria-hidden="true" decoding="async" height="1500" loading="eager"
                src="images/beetle_1.webp" width="2250">
         </picture>
       </div>
       <div class="f-carousel__slide">
         <picture>
-          <source media="(max-width: 600px)" srcset="images/beetle_2.webp">
+          <source media="(max-width: 600px)" srcset="images/beetle_2_small.webp">
           <source media="(min-width: 601px)" srcset="images/beetle_2.webp">
-          <img alt="ferrari f40" aria-hidden="true" decoding="async" height="1500"
+          <img alt="ferrari f40" aria-hidden="true" decoding="async" height="1500" loading="eager"
                src="images/beetle_2.webp" width="2250">
         </picture>
       </div>
       <div class="f-carousel__slide">
         <picture>
-          <source media="(max-width: 600px)" srcset="images/beetle_3.webp">
+          <source media="(max-width: 600px)" srcset="images/beetle_3_small.webp">
           <source media="(min-width: 601px)" srcset="images/beetle_3.webp">
-          <img alt="ferrari f40" aria-hidden="true" decoding="async" height="1500"
+          <img alt="ferrari f40" aria-hidden="true" decoding="async" height="1500" loading="eager"
                src="images/beetle_3.webp" width="2250">
         </picture>
       </div>
@@ -195,14 +195,14 @@
                 srcset="images/excavator.webp">
         <!--Tablet and above Image-->
         <source media="(min-width: 601px)"
-                srcset="images/excavator.webp">
+                srcset="images/excavator_small.webp">
         <img alt="body builder" decoding="async" height="568"
              loading="lazy" src="images/excavator.webp" width="562">
       </picture>
       <!--Pink Blob-->
       <img alt="red splatter" class="cs-splatter" decoding="async"
            height="478" loading="lazy"
-           src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/flipped-red.svg" width="441">
+           src="images/flipped-red.webp" width="441">
     </div>
     <div class="cs-content">
       <span class="cs-topper">Model of the day</span>
@@ -218,12 +218,12 @@
   <!--White Splash Graphic-->
   <img alt="graphic" class="cs-graphic cs-light"
        decoding="async" height="161" loading="lazy"
-       src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/f7-splatter.svg" width="1920">
+       src="images/f7-splatter.webp" width="1920">
   <!--This is a dark version. Download the image and change the fill color to match the color of the section background below it-->
   <img alt="graphic"
        class="cs-graphic cs-dark" decoding="async"
        height="161" loading="lazy"
-       src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/dark-mode-splatter2.svg" width="1920">
+       src="images/dark-mode-splatter2.webp" width="1920">
 </section>
 
 <!-- ============================================ -->
@@ -242,16 +242,36 @@
         <a data-fancybox="gallery_ferrari" href="images/ferrari_f40.webp">
           <picture>
             <source media="(max-width: 600px)"
-                    srcset="images/ferrari_f40.webp">
+                    srcset="images/ferrari_f40_small.webp">
             <source media="(min-width: 601px)"
                     srcset="images/ferrari_f40.webp">
             <img alt="gallery" decoding="async"
-                 height="320" loading="lazy" src="images/ferrari_f40.webp"
+                 height="320" loading="lazy" src="images/ferrari_f40_small.webp"
                  width="272">
           </picture>
         </a>
-        <a data-fancybox="gallery_ferrari" href="images/ferrari_f40_2.webp"></a>
-        <a data-fancybox="gallery_ferrari" href="images/ferrari_f40_3.webp"></a>
+        <a data-fancybox="gallery_ferrari" href="images/ferrari_f40_2.webp">
+          <picture>
+            <source media="(max-width: 600px)"
+                    srcset="images/ferrari_f40_2_small.webp">
+            <source media="(min-width: 601px)"
+                    srcset="images/ferrari_f40_2.webp">
+            <img alt="gallery" decoding="async"
+                 height="320" loading="lazy" src="images/ferrari_f40_2_small.webp"
+                 width="272">
+          </picture>
+        </a>
+        <a data-fancybox="gallery_ferrari" href="images/ferrari_f40_3.webp">
+          <picture>
+            <source media="(max-width: 600px)"
+                    srcset="images/ferrari_f40_3_small.webp">
+            <source media="(min-width: 601px)"
+                    srcset="images/ferrari_f40_3.webp">
+            <img alt="gallery" decoding="async"
+                 height="320" loading="lazy" src="images/ferrari_f40_3_small.webp"
+                 width="272">
+          </picture>
+        </a>
         <a aria-label="read more about us" class="cs-button-10" href="#">
           Read More
           <svg aria-hidden="true" class="cs-icon" fill="none" height="24" viewBox="0 0 30 24" width="30"
@@ -271,16 +291,36 @@
         <a data-fancybox="gallery_lamborghini" href="images/lamborghini_3.webp">
           <picture>
             <source media="(max-width: 600px)"
-                    srcset="images/lamborghini_3.webp">
+                    srcset="images/lamborghini_3_small.webp">
             <source media="(min-width: 601px)"
                     srcset="images/lamborghini_3.webp">
             <img alt="gallery" decoding="async"
-                 height="320" loading="lazy" src="images/lamborghini_3.webp"
+                 height="320" loading="lazy" src="images/lamborghini_3_small.webp"
                  width="272">
           </picture>
         </a>
-        <a data-fancybox="gallery_lamborghini" href="images/lamborghini_2.webp"></a>
-        <a data-fancybox="gallery_lamborghini" href="images/lamborghini_1.webp"></a>
+        <a data-fancybox="gallery_lamborghini" href="images/lamborghini_2.webp">
+          <picture>
+            <source media="(max-width: 600px)"
+                    srcset="images/lamborghini_2_small.webp">
+            <source media="(min-width: 601px)"
+                    srcset="images/lamborghini_2.webp">
+            <img alt="gallery" decoding="async"
+                 height="320" loading="lazy" src="images/lamborghini_2_small.webp"
+                 width="272">
+          </picture>
+        </a>
+        <a data-fancybox="gallery_lamborghini" href="images/lamborghini_1.webp">
+          <picture>
+            <source media="(max-width: 600px)"
+                    srcset="images/lamborghini_1_small.webp">
+            <source media="(min-width: 601px)"
+                    srcset="images/lamborghini_1.webp">
+            <img alt="gallery" decoding="async"
+                 height="320" loading="lazy" src="images/lamborghini_1_small.webp"
+                 width="272">
+          </picture>
+        </a>
         <a aria-label="read more about us" class="cs-button-10" href="#">
           Read More
           <svg aria-hidden="true" class="cs-icon" fill="none" height="24" viewBox="0 0 30 24" width="30"
@@ -300,16 +340,36 @@
         <a data-fancybox="gallery_vw" href="images/vw_2.webp">
           <picture>
             <source media="(max-width: 600px)"
-                    srcset="images/vw_2.webp">
+                    srcset="images/vw_2_small.webp">
             <source media="(min-width: 601px)"
                     srcset="images/vw_2.webp">
             <img alt="gallery" decoding="async"
-                 height="320" loading="lazy" src="images/vw_2.webp"
+                 height="320" loading="lazy" src="images/vw_2_small.webp"
                  width="272">
           </picture>
         </a>
-        <a data-fancybox="gallery_vw" href="images/vw_3.webp"></a>
-        <a data-fancybox="gallery_vw" href="images/vw_1.webp"></a>
+        <a data-fancybox="gallery_vw" href="images/vw_3.webp">
+          <picture>
+            <source media="(max-width: 600px)"
+                    srcset="images/vw_3_small.webp">
+            <source media="(min-width: 601px)"
+                    srcset="images/vw_3.webp">
+            <img alt="gallery" decoding="async"
+                 height="320" loading="lazy" src="images/vw_3_small.webp"
+                 width="272">
+          </picture>
+        </a>
+        <a data-fancybox="gallery_vw" href="images/vw_1.webp">
+          <picture>
+            <source media="(max-width: 600px)"
+                    srcset="images/vw_1_small.webp">
+            <source media="(min-width: 601px)"
+                    srcset="images/vw_1.webp">
+            <img alt="gallery" decoding="async"
+                 height="320" loading="lazy" src="images/vw_1_small.webp"
+                 width="272">
+          </picture>
+        </a>
         
         <a aria-label="read more about us" class="cs-button-10" href="#">
           Read More
