--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>JaysModels</title>
-  <link href="/images/favicon.png" rel="icon" type="image/x-icon">
-  
+  <link rel="icon" href="/images/favicon.png">
   <meta content="noindex,nofollow" name="robots">
   
   <link href="styles/global.css" rel="stylesheet">
